# vaapi

./: .gitignore  Cargo.toml  README.md  bindgen_gen.rs  build.rs  deny.toml  flake.nix  justfile
.github/workflows/: check.yml
src/: bindings.rs  bitstream_utils.rs  buffer.rs  codec.rs  config.rs  context.rs  display.rs  encode.rs  generic_value.rs  image.rs  lib.rs  picture.rs  surface.rs  usage_hint.rs
src/buffer/: av1.rs  enc_jpeg.rs  enc_misc.rs  h264.rs  hevc.rs  jpeg_baseline.rs  mpeg2.rs  proc_pipeline.rs  vp8.rs  vp9.rs
src/codec/h264/: dpb.rs  nalu.rs  nalu_writer.rs  parser.rs  picture.rs  synthesizer.rs
