[package]
name = "moq-vaapi"
version = "0.0.1"
description = "(AI GENERATED) VA-API H.264 hardware encoder, derived from discord/cros-libva + discord/cros-codecs"
authors = ["The ChromiumOS Authors", "Discord", "Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/vaapi"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["vaapi", "h264", "encoder", "video", "hardware"]
categories = ["multimedia::encoding", "hardware-support", "external-ffi-bindings"]
edition = "2021"
rust-version = "1.85"

# Dev-only tooling; not needed to build the crate from the published tarball.
exclude = ["flake.nix", "flake.lock", "justfile", "deny.toml", "rust-toolchain.toml", ".rustfmt.toml"]

# The build is hermetic: bindgen reads the vendored libva headers checked into
# `libva/` (refreshed by `just vendor`, pinned to a known VA-API version so a
# system libva bump can't drift the bindings), and libva is dlopen'd at runtime
# rather than linked (so a built binary links on a libva-less host and starts on
# machines without libva). There is no system-libva build path, so there are no
# features to toggle: the build needs only libclang (for bindgen) on any OS.

[dependencies]
anyhow = "1"
thiserror = "1"
bitflags = "2.5"
log = { version = "0", features = ["release_max_level_debug"] }

[build-dependencies]
bindgen = "0.70.1"
regex = "1.11.1"
