[package]
name = "moq-vaapi"
version = "0.0.2"
description = "(AI GENERATED) VA-API H.264 hardware encoder, derived from discord/cros-libva + discord/cros-codecs"
authors = ["The ChromiumOS Authors", "Discord", "Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/vaapi"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["vaapi", "h264", "encoder", "video", "hardware"]
categories = ["multimedia::encoding", "hardware-support", "external-ffi-bindings"]
edition = "2021"
rust-version = "1.85"

# Dev-only tooling; not needed to build the crate from the published tarball.
exclude = ["flake.nix", "flake.lock", "justfile", "deny.toml", "rust-toolchain.toml", ".rustfmt.toml"]

# bindgen reads the vendored libva headers checked into `libva/` (refreshed by
# `just vendor`, pinned to a known VA-API version so a system libva bump can't
# drift the bindings); libva itself is linked on Linux via pkg-config (VA-API's
# ABI is stable, so a newer system libva links fine against the pinned bindings).
# The rlib build needs only libclang + the vendored headers, so it compiles on any
# OS (e.g. macOS) for development; the libva link only happens on Linux.

[dependencies]
anyhow = "1"
thiserror = "1"
bitflags = "2.5"
log = { version = "0", features = ["release_max_level_debug"] }

[build-dependencies]
bindgen = "0.70.1"
pkg-config = "0.3.31"
regex = "1.11.1"
